<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_license"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_about"
        android:title="@string/GoogleAggreement"
        app:showAsAction="never"/>
   
   <item
        android:id="@+id/action_trips"
        android:orderInCategory="110"
        android:icon="@drawable/ic_action_map"
        android:title="@string/RecordedTrips"
        app:iconTint="@color/black"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_settigns"
        android:orderInCategory="120"
        android:icon="@drawable/ic_action_settings"
        app:iconTint="@color/black"
        android:title="@string/AppSettings"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_gliders"
        android:icon="@drawable/ic_glider_icon"
        android:title="Gliders"
        app:showAsAction="always" />


</menu>
